#1 - 장치 Response DTO 통일, API 논리 버그 수정 및 전체 테스트 통과 완료
- DeviceVo를 DeviceResponse로 이름을 변경하고 관련 컨트롤러, 서비스, 테스트 코드의 참조를 모두 업데이트
- /deviceTypeCodes API 호출 시 동물 종류나 병원 진료과목 등의 무관한 데이터가 노출되지 않도록 'dtype' 기기 분류 코드로만 필터링되게 수정
- MemberServiceTest에서 mock 설정 오류로 실패하던 회원 정보 검증 테스트(verifyUserSuccess)를 통과하도록 수정 완료
- 불필요한 패키지 임포트(import)문 정리 및 사용하지 않는 애노테이션을 삭제